--- a/papers/Cr/bib.bib
+++ b/papers/Cr/bib.bib
@@ -12,3 +12,135 @@ volume = {117},
 year = {2016}
 }
 
+@article{Singer2015,
+abstract = {Symmetry breaking and the emergence of order is one of the most fascinating phenomena in condensed matter physics. It leads to a plethora of intriguing ground states found in antiferromagnets, Mott insulators, superconductors, and density-wave systems. Exploiting states of matter far from equilibrium can provide even more striking routes to symmetry-lowered, ordered states. Here, we demonstrate for the case of elemental chromium that moderate ultrafast photo-excitation can transiently enhance the charge-density-wave (CDW) amplitude by up to 30{\%} above its equilibrium value, while strong excitations lead to an oscillating, large-amplitude CDW state that persists above the equilibrium transition temperature. Both effects result from dynamic electron-phonon interactions, providing an efficient mechanism to selectively transform a broad excitation of the electronic order into a well defined, long-lived coherent lattice vibration. This mechanism may be exploited to transiently enhance order parameters in other systems with coupled degrees of freedom.},
+archivePrefix = {arXiv},
+arxivId = {1511.08261},
+author = {Singer, A and Patel, S. K. K. and Kukreja, R and Uhl{\'{i}}ř, V. and Wingert, J and Festersen, S and Zhu, D and Glownia, J. M. and Lemke, H. and Nelson, S. and Kozina, M. and Rossnagel, K. and Bauer, M. and Murphy, B. M. and Magnussen, O. M. and Fullerton, E. E. and Shpyrko, O. G.},
+doi = {10.1103/PhysRevLett.117.056401},
+eprint = {1511.08261},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Singer et al. - Unknown - Photoinduced E nhancement of the C harge Density Wave A mplitude.pdf:pdf},
+isbn = {1079-7114 (Electronic) 0031-9007 (Linking)},
+issn = {10797114},
+journal = {Physical Review Letters},
+mendeley-groups = {PhD/Cr CDW},
+month = {nov},
+number = {5},
+pmid = {27517781},
+title = {{Photoinduced Enhancement of the Charge Density Wave Amplitude}},
+url = {http://arxiv.org/abs/1511.08261 http://dx.doi.org/10.1103/PhysRevLett.117.056401},
+volume = {117},
+year = {2015}
+}
+@article{Zeiger1992,
+abstract = {We report femtosecond time-resolved pump-probe reflection experiments in semimetals and semiconductors that show large-amplitude oscillations with periods characteristic of lattice vibrations. Only A1 modes are detected, although modes with other symmetries are observed with comparable intensity in Raman scattering. We present a theory of the excitation process in this class of materials, which we refer to as displacive excitation of coherent phonons (DECP). In DECP, after excitation by a pump pulse, the electronically excited system rapidly comes to quasiequilibrium in a time short compared to nuclear response times. In materials with A1 vibrational modes, the quasiequilibrium nuclear A1 coordinates are displaced with no change in lattice symmetry, giving rise to a coherent vibration of A1 symmetry about the displaced quasiequilibrium coordinates. One important prediction of the DECP mechanism is the excitation of only modes with A1 symmetry. Furthermore, the oscillations in the reflectivity R are excited with a cos(0t) dependence, where t=0 is the time of arrival of the pump pulse peak, and 0 is the vibrational frequency of the A1 mode. These predictions agree well with our observations in Bi, Sb, Te, and Ti2O3. The fit of the experimental R(t)/R(0) data to the theory is excellent. {\textcopyright} 1992 The American Physical Society.},
+author = {Zeiger, H. J. and Vidal, J. and Cheng, T. K. and Ippen, E. P. and Dresselhaus, G. and Dresselhaus, M. S.},
+doi = {10.1103/PhysRevB.45.768},
+file = {:home/ponet/Downloads/PhysRevB.45.768.pdf:pdf},
+issn = {01631829},
+journal = {Physical Review B},
+number = {2},
+pages = {768--778},
+pmid = {10001117},
+title = {{Theory for displacive excitation of coherent phonons}},
+volume = {45},
+year = {1992}
+}
+
+@article{Torrontegui2013,
+abstract = {Quantum adiabatic processes-that keep constant the populations in the instantaneous eigenbasis of a time-dependent Hamiltonian-are very useful to prepare and manipulate states, but take typically a long time. This is often problematic because decoherence and noise may spoil the desired final state, or because some applications require many repetitions. "Shortcuts to adiabaticity" are alternative fast processes which reproduce the same final populations, or even the same final state, as the adiabatic process in a finite, shorter time. Since adiabatic processes are ubiquitous, the shortcuts span a broad range of applications in atomic, molecular, and optical physics, such as fast transport of ions or neutral atoms, internal population control, and state preparation (for nuclear magnetic resonance or quantum information), cold atom expansions and other manipulations, cooling cycles, wavepacket splitting, and many-body state engineering or correlations microscopy. Shortcuts are also relevant to clarify fundamental questions such as a precise quantification of the third principle of thermodynamics and quantum speed limits. We review different theoretical techniques proposed to engineer the shortcuts, the experimental results, and the prospects. {\textcopyright} 2013 Elsevier Inc.},
+archivePrefix = {arXiv},
+arxivId = {1212.6343},
+author = {Torrontegui, Erik and Ib{\'{a}}{\~{n}}ez, Sara and Mart{\'{i}}nez-Garaot, Sofia and Modugno, Michele and del Campo, Adolfo and Gu{\'{e}}ry-Odelin, David and Ruschhaupt, Andreas and Chen, Xi and Muga, Juan Gonzalo},
+doi = {10.1016/B978-0-12-408090-4.00002-5},
+eprint = {1212.6343},
+file = {:home/ponet/Downloads/1212.6343.pdf:pdf},
+issn = {1049250X},
+journal = {Advances in Atomic, Molecular and Optical Physics},
+keywords = {Adiabatic dynamics,Fast expansions,Quantum speed limits,Quantum state engineering,Superadiabaticity,Third principle of thermodynamics,Transitionless tracking algorithm,Transport engineering of cold atoms,Transport of Bose-Einstein condensates,Transport of cold ions,Wavepacket splitting},
+number = {September},
+pages = {117--169},
+title = {{Shortcuts to Adiabaticity}},
+volume = {62},
+year = {2013}
+}
+@article{Deffner2014,
+abstract = {A shortcut to adiabaticity is a driving protocol that reproduces in a short time the same final state that would result from an adiabatic, infinitely slow process. A powerful technique to engineer such shortcuts relies on the use of auxiliary counterdiabatic fields. Determining the explicit form of the required fields has generally proven to be complicated. We present explicit counterdiabatic driving protocols for scale-invariant dynamical processes, which describe, for instance, expansion and transport. To this end, we use the formalism of generating functions and unify previous approaches independently developed in classical and quantum studies. The resulting framework is applied to the design of shortcuts to adiabaticity for a large class of classical and quantum, single-particle, nonlinear, and many-body systems.},
+author = {Deffner, Sebastian and Jarzynski, Christopher and del Campo, Adolfo},
+doi = {10.1103/PhysRevX.4.021013},
+file = {:home/ponet/Downloads/PhysRevX.4.021013.pdf:pdf},
+issn = {21603308},
+journal = {Physical Review X},
+keywords = {Interdisciplinary physics,Quantum physics},
+number = {2},
+pages = {1--19},
+title = {{Classical and quantum shortcuts to adiabaticity for scale-invariant driving}},
+volume = {4},
+year = {2014}
+}
+
+@article{Zhou2017,
+abstract = {Adiabatic processes are useful for quantum technologies but, despite their robustness to experimental imperfections, they remain susceptible to decoherence due to their long evolution time. A general strategy termed shortcuts to adiabaticity (STA) aims to remedy this vulnerability by designing fast dynamics to reproduce the results of a slow, adiabatic evolution. Here, we implement an STA technique known as superadiabatic transitionless driving (SATD) to speed up stimulated Raman adiabatic passage in a solid-state lambda system. Using the optical transitions to a dissipative excited state in the nitrogen-vacancy centre in diamond, we demonstrate the accelerated performance of different shortcut trajectories for population transfer and for the initialization and transfer of coherent superpositions. We reveal that SATD protocols exhibit robustness to dissipation and experimental uncertainty, and can be optimized when these effects are present. These results suggest that STA could be effective for controlling a variety of solid-state open quantum systems.},
+archivePrefix = {arXiv},
+arxivId = {1607.06503},
+author = {Zhou, Brian B. and Baksic, Alexandre and Ribeiro, Hugo and Yale, Christopher G. and Heremans, F. Joseph and Jerger, Paul C. and Auer, Adrian and Burkard, Guido and Clerk, Aashish A. and Awschalom, David D.},
+doi = {10.1038/nphys3967},
+eprint = {1607.06503},
+file = {:home/ponet/Downloads/nphys3967.pdf:pdf},
+issn = {17452481},
+journal = {Nature Physics},
+number = {4},
+pages = {330--334},
+title = {{Accelerated quantum control using superadiabatic dynamics in a solid-state lambda system}},
+volume = {13},
+year = {2017}
+}
+
+@article{Kulikov1984,
+author = {Kulikov, N I and Tugushev, V V},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Kulikov, Tugushev - 1984 - Spin-density waves and itinerant antiferromagnetism in metals.pdf:pdf},
+mendeley-groups = {PhD Thesis/Cr},
+title = {{Spin-density waves and itinerant antiferromagnetism in metals}},
+volume = {954},
+year = {1984}
+}
+
+@article{Fawcett1988,
+abstract = {{A comprehensive account is given of the macroscopic and microscopic physical properties of chromium (and where appropriate those of its dilute alloys) that relate to its antiferromagnetism. Neutron scattering is treated in great detail, first in the historical introduction, then as an experimental probe of both the magnetic structure and the excitations of the incommensurate spin-density-wave state and (with the assis-tance of x rays{\}} of the concomitant charge-density wave and strain wave. Neutron scattering is considered as a tool to explore not only the disappearance of long-range order with increasing temperature through the growth of excitations as the weak first-order Neel transition is approached, but also the persistence of these spin fluctuations we' ll into the paramagnetic state — processes that are still little understood. The ar-ticle surveys, without mathematical details, model systems designed to reproduce the magnetic and ther-modynamic properties of Cr. The energy-band structure calculations are given a more comprehensive re-view. Special attention is paid to calculations of the wave-vector-dependent susceptibility that reproduce the observed wave vector of the spin-density wave, and to a recent finite-temperature calculation that gives almost the right Neel temperature. The review of Fermi-surface studies emphasizes those designed to relate the spiIi-density wave vector {\{}and its pressure dependence{\}} to the nesting vector of the Fermi sur-face. An account is given of the spectroscopic determination of the energy gap(s), whose theoretical analysis is still unclear, and of experiments aimed at determining physical properties that throw light on the origin of the weak first-order Neel transition. The article describes the use of magnetic anomalies in the elastic moduli to determine the volume dependence of the exchange interaction responsible for antifer-romagnetism in Cr. The experimental features of the spin-Aip transition are reviewed, although a theory of this phenomenon is wanting. The experimental study of microscopic structure by the use of hyperfine-interaction properties is surveyed. An account is given of both experimental and theoretical studies of the surface of Cr and of Cr films and sandwiches. Finally, "technical antiferromagnetism" is discussed: the effect of severe internal strain in producing a commensurate antiferromagnetic state, wave-vector g domains, polarization S domains (for which the experimental evidence is scanty), and ultrasonic attenua-tion as a tool to study them.},
+author = {Fawcett, Eric},
+doi = {10.1103/RevModPhys.60.209},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Demidova et al. - 2013 - Effect of surfactant additives on the size and morphology of ammonium and potassium nitrate particles obtained.pdf:pdf},
+isbn = {0034-6861},
+issn = {0034-6861},
+journal = {Reviews of Modern Physics},
+mendeley-groups = {PhD/Cr CDW,PhD Thesis/Cr},
+month = {jan},
+number = {1},
+pages = {209--283},
+title = {{Spin-density-wave antiferromagnetism in chromium}},
+url = {http://link.springer.com/10.1134/S0036023613100069 https://link.aps.org/doi/10.1103/RevModPhys.60.209},
+volume = {60},
+year = {1988}
+}
+
+@book{Khomskii2010,
+address = {Cambridge},
+author = {Khomskii, Daniel I.},
+doi = {10.1017/CBO9780511780271},
+file = {:home/ponet/Downloads/Khomskii-Basic{\_}Aspects{\_}of{\_}the{\_}Quantum{\_}Theory{\_}of{\_}Solids{\_}{\_}Order{\_}and{\_}Elementary{\_}Excitations.pdf:pdf},
+isbn = {9780511780271},
+publisher = {Cambridge University Press},
+title = {{Basic Aspects of The Quantum Theory of Solids}},
+url = {http://ebooks.cambridge.org/ref/id/CBO9780511780271},
+year = {2010}
+}
+
+@article{rackauckas2017differentialequations,
+  title={Differentialequations.jl--a performant and feature-rich ecosystem for solving differential equations in julia},
+  author={Rackauckas, Christopher and Nie, Qing},
+  journal={Journal of Open Research Software},
+  volume={5},
+  number={1},
+  year={2017},
+  publisher={Ubiquity Press}
+}
