--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -49,13 +49,13 @@
 
 % \usetikzlibrary{shapes,arrows,decorations.pathmorphing}
 
-% \title{
-	% {Interplay between complex orders in functional materials}\\
-	% {\large Department of Nanosciences, Scuola Normale Superiore di Pisa}\\
-	% {\large Quantum Materials Theory, Istituto Italiano di Tecnologia}}
+\title{
+	{Interplay between complex orders in functional materials}\\
+	{\large Department of Nanosciences, Scuola Normale Superiore di Pisa}\\
+	{\large Quantum Materials Theory, Istituto Italiano di Tecnologia}}
 
-% \author{Louis Ponet}
-% \date{today}
+\author{Louis Ponet}
+\date{today}
 
 \begin{document}
 
@@ -93,9 +93,9 @@ We utilize both theoretical and computational tools to understand the nature of 
 % % \Include{Theory}
 % \chapter{Charge order and spin-momentum locking in high spin-orbit coupled ferroelectrics}
 % \Include{Rashba}
-% \Include{Cr}
 % \Include{GdMn2O5}
 % \Include{Softening}
+\Include{Cr}
 % \chapter{Strong coupling and ultrafast control of charge and spin density waves in elemental Chromium}
 % \subfile{chapters/chromium_sdw_cdw.tex}
 \end{document}
